Fix truncated text height not being consistent

--- a/assets/scss/components/_event_card.scss
+++ b/assets/scss/components/_event_card.scss
@@ -97,6 +97,7 @@
   font-size: 14px;
   margin-bottom: 2rem;
   color: #42474c;
+  min-height: 51px;
 }
 
 .red_line {
